# sf

./: .gitignore  PLAN.md  PLAN1.md  PLAN2.md  README.md  prompt.md
.codex/skills/frontend-styling/: SKILL.md
dashboard/: Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx  main.tsx
dashboard/src/api/: client.ts
dashboard/src/components/: MetricCard.tsx  PageHeader.tsx  (+1 more)
deploy/: docker-compose.yml
services/backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
services/backend/app/: __init__.py  celery_app.py  main.py  ops_main.py  rag_main.py  reranker_main.py  run_service.py  worker_healthcheck.py
services/backend/app/api/: audit.py  auth.py  containers.py  dependencies.py  documents.py  gpu.py  jobs.py  knowledge.py  models.py  rag.py  system.py
services/backend/app/core/: config.py  errors.py  logging_utils.py  metrics.py  security.py  web.py
services/backend/app/db/: session.py
services/backend/app/db/migrations/: env.py
services/backend/app/db/migrations/versions/: 20260421_01_baseline.py  20260421_02_production_hardening.py
services/backend/app/models/: entities.py
services/backend/app/schemas/: api.py
services/backend/app/services/: events.py  gpu_service.py  health_service.py  ops_service.py  platform_service.py  rag_service.py  storage.py
services/backend/app/tasks/: __init__.py  pipeline.py
services/backend/app/utils/: text.py
services/backend/requirements/: production.txt
services/backend/tests/: test_gpu_api.py  test_security.py  test_text_utils.py
(+35 files in other folders)
