[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-platform-backend"
version = "0.1.0"
description = "Backend services for the dual-server RAG platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "gunicorn>=23.0.0",
  "sqlalchemy>=2.0.36",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.1",
  "httpx>=0.27.2",
  "PyJWT>=2.9.0",
  "python-multipart>=0.0.12",
  "celery>=5.4.0",
  "redis>=5.1.1",
  "minio>=7.2.8",
  "kafka-python>=2.0.2",
  "psycopg[binary]>=3.2.3",
  "haystack-ai>=2.3.1",
  "docling>=2.16.0",
  "pypdf>=5.0.1",
  "python-docx>=1.1.2",
  "markdown>=3.7",
  "transformers>=4.45.2",
  "torch>=2.4.1",
]

[project.optional-dependencies]
ops = ["docker>=7.1.0"]
search = ["elasticsearch>=8.15.1", "pymilvus>=2.4.7"]
ocr = ["paddleocr>=2.8.1", "Pillow>=11.0.0"]
rerank = ["transformers>=4.45.2", "torch>=2.4.1"]
dev = ["pytest>=8.3.3", "pytest-cov>=5.0.0"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
